# megalibm

./: .gitignore  pyproject.toml
examples/: amd_fast_asin.mlm.py  sun_asin.mlm.py
src/: run_example.py
src/lambdas/: inflection_right.py
